@@ -1,3 +1,6 @@
+2007-02-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/reporter.c: Fix postscript crash.
+
 2007-02-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amindexd.c: Use dbfd.
 
